syntax = "proto3";

package user;

import "types.proto";
import "google/protobuf/timestamp.proto";

message HelloServer {
	option (types.message_id) = kHelloServer;
	string access_token = 1;
	string user_id = 2;
}

message HelloClient {
	option (types.message_id) = kHelloClient;
}

message DisconnectAlertNotify {
	option (types.message_id) = kDisconnectAlertNotify;
	string reason = 1;
}

message HelloClientAck {
	option (types.message_id) = kHelloClientAck;
	
	int64 account_id = 1;
	string user_id = 2;
	string username = 3;
	google.protobuf.Timestamp last_login_time = 4;
	google.protobuf.Timestamp last_logout_time = 5;
	google.protobuf.Timestamp created_at = 6;
}